--- a/part-2/17-nav-menu/styles.css
+++ b/part-2/17-nav-menu/styles.css
@@ -1,1 +1,19 @@
 /* Write your media queries and flexbox CSS below */
+@media (min-width: 480px) {
+  .site-header__nav {
+    display: flex;
+  }
+}
+@media (min-width: 700px) {
+  .site-heade {
+    display: flex;
+    align-items: center;
+  }
+}
+@media (min-width: 992px) {
+  .site-heade {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
