--- a/part-1/6-css-properties/styles.css
+++ b/part-1/6-css-properties/styles.css
@@ -1,1 +1,18 @@
 /* Add your CSS code below */
+.messages a {
+  color: red;
+  font-weight: bold;
+  text-decoration: none;
+}
+.message__time {
+  font-size: 0.9rem;
+}
+.message--unread {
+  border-left: blue solid;
+}
+.message__time--old {
+  opacity: 10;
+}
+.message__time {
+  line-height: 1.5;
+}
