--- a/part-3/25-shirt-size/styles.css
+++ b/part-3/25-shirt-size/styles.css
@@ -1,1 +1,5 @@
-/* Add your CSS below */
+.screen-reader {
+  clip: rect(1px, 1px, 1px, 1px);
+  position: absolute !important;
+  left: -2000px;
+}
